giscanner: Recognize _Thread_local as a storage class specifier

_Thread_local is a C11 keyword, and thread_local is a macro to make it
more confortable to read. As this keyword can only be used in variable
declarations, not in function return values or parameters, it cannot
be included in bindable APIs and we can safely ignore it.

https://bugzilla.gnome.org/show_bug.cgi?id=756921